# ChronoGuard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agent-tools.json  openapi.yaml  package-lock.json  package.json  vitest.config.ts
.github/workflows/: tz-update-check.yml
docker/: Dockerfile
legal/: DPA-template.md  enterprise-playbook.md
mcp/: README.md  package.json  tsconfig.json
mcp/examples/: cursor-config.json
mcp/src/: client.ts  index.ts
mcp/src/tools/: batch.ts  convert.ts  resolve.ts  validate.ts
postman/: ChronoShield-API.postman_collection.json
scripts/: demo-gif-script.md  enterprise-provision.mjs  smoke-reset.js  soak.mjs  tz-check.mjs  tz-update.mjs
sdk/python/: CHANGELOG.md  README.md  pyproject.toml  setup.py
sdk/python/chronoguard/: client.py
sdk/python/chronoshield/: __init__.py  client.py
sdk/python/examples/: basic_usage.py
sdk/typescript/: CHANGELOG.md  README.md  package.json
src/: server.ts
src/config/: env.ts  sentry.ts
src/public/: ai-agents.html  correctness.html  docs.html  how-it-works.html  index.html  llms.txt  manage-subscription.html  reset-key.html  use-case-billing-workflows.html  use-case-scheduling.html
src/routes/: admin.ts  batch.ts  billing.ts  contact.ts  convert.ts  keys.ts  resolve.ts  validate.ts  version.ts  webhooks.ts
src/schemas/: datetime.schema.ts
src/services/: conversion.service.ts  resolution.service.ts
src/utils/: bundledZone.ts  email.ts  resetTokens.ts  timezone.ts
tests/: api.test.ts  bundled-zone-fuzz.test.ts  bundled-zone-parity.test.ts  set-tier.test.ts  setup.ts
(+5 files in other folders)
