[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronoguard"
version = "1.0.0"
description = "Python SDK for the ChronoGuard API — DST-aware datetime validation, resolution, and conversion"
readme = "README.md"
license = "ISC"
requires-python = ">=3.8"
keywords = ["timezone", "dst", "daylight-saving", "datetime", "validation", "utc", "iana", "chronoguard"]

[project.urls]
Homepage = "https://chronoguard-api-production.up.railway.app/docs"
Repository = "https://github.com/Mike-Mait/ChronoGuard"
